RESOLVED FIXED137826
[iOS] Crash when load is canceled while waiting for the user to type HTTP authentication credentials
https://bugs.webkit.org/show_bug.cgi?id=137826
Summary [iOS] Crash when load is canceled while waiting for the user to type HTTP aut...
Alexey Proskuryakov
Reported 2014-10-17 11:34:57 PDT
Attachments
proposed fix (3.76 KB, patch)
2014-10-17 11:38 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2014-10-17 11:38:32 PDT
Created attachment 240026 [details] proposed fix
Alexey Proskuryakov
Comment 2 2014-10-17 11:49:13 PDT
Note You need to log in before you can comment on or make changes to this bug.