[iOS] Crash when load is canceled while waiting for the user to type HTTP authentication credentials https://bugs.webkit.org/show_bug.cgi?id=137826 rdar://problem/17329599

Reviewed by Brady Eidson.

No new tests, as we don't have a way to simulate details of user interaction with
an auth dialog.

* platform/network/cf/ResourceHandleCFNet.cpp:
(WebCore::ResourceHandle::receivedCredential):
(WebCore::ResourceHandle::receivedRequestToContinueWithoutCredential):
(WebCore::ResourceHandle::receivedRequestToPerformDefaultHandling):
(WebCore::ResourceHandle::receivedChallengeRejection):
Added null checks before passing m_connection for CFNetwork functions, making this
match what Mac code does when sending a message to a nil receiver.



Canonical link: https://commits.webkit.org/155684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174827 268f45cc-cd09-0410-ab3c-d52691b4dbfc